--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </head>
   <body class="w-full h-screen bg-[#101828] text-gray-300">
     <div class="w-full max-w-[1340px] h-full m-auto pt-4">
+      <!-- bu kodi o`zgartirdim -->
       <header
         class="w-full px-10 py-4 border-1 border-gray-600 rounded-lg bg-[#172030] flex items-center justify-between font-medium"
       >
